2009-03-25  Mark Ellis <mark@mpellis.org.uk>

	* hal/10-synce.fdi - only use an rndis_host interface with 
	  class 239, subclass 1, protocol 1, which is a device in
	  sync mode; leave Internet Connection Sharing to networking
	  tools

2009-03-24  Mark Ellis <mark@mpellis.org.uk>

	* hal/hal-synce-rndis.in - fix typo

2009-03-23  Mark Ellis <mark@mpellis.org.uk>

	* configure.ac.in - change default hal addon dir to hal/scripts

2009-03-16  Mark Ellis <mark@mpellis.org.uk>

	* hal/synce-hal-serial.in - reference correct udi when
	  checking if this is the port to use

2009-03-09  Mark Ellis <mark@mpellis.org.uk>

	* hal/synce-hal-serial.in - check if device is 2 port /
	  4 endpoint, mark first port as unused and do not start dccm

2009-02-17  Mark Ellis <mark@mpellis.org.uk>

	* install dbus config file to enable all user access to
	  our hal interface

2009-02-06  Mark Ellis <mark@mpellis.org.uk>

	* added synce-unlock.py, script to unlock a device
	  from the command line
	* configure.ac.in - added better checking of hal addon dir

2009-01-26  Mark Ellis <mark@mpellis.org.uk>

	* 0.13.1 release
	* configure.ac.in - fixed non-POSIX conditionals

2009-01-10  Mark Ellis <mark@mpellis.org.uk>

	* 0.13 release

2008-11-19  Mark Ellis <mark@mpellis.org.uk>

	* add hal fields used by gnome-volume-manager

2008-11-13  Mark Ellis <mark@mpellis.org.uk>

	* improve bluetooth support, can be enabled through configure

2008-11-12  Mark Ellis <mark@mpellis.org.uk>

	* provide sparse config file for dhclient, specify lease
	  and pid file names
	* release dhcp lease on device disconnect

2008-10-28  Mark Ellis <mark@mpellis.org.uk>

	* src/utils.c - correct use of g_debug()
	* src/synce-connection-broker.c - close fd used to pass
	  connection to user clients

2008-10-16  Mark Ellis <mark@mpellis.org.uk>

	* etc/synce-hal.conf.in - replaces synce-serial.conf.in, an
	  (optional) .ini style config file instead of a shell snippet
	* configure.ac.in - added new config file